--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#estudios">Estudios</a></li>
                     <li><a href="#hobbies">Hobbies</a></li>
                     <li><a href="#proyectos">Proyectos</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="#contacto">Contactoooo</a></li>
                     <li><a href="https://docs.google.com/document/d/17r-p2Tj__OGSP9gcFYhXVXBwpEBbpXH0SJPv-LbWGkI/edit?usp=sharing" target="_blank">Curriculum</a></li>
                 </ul>
             </nav>    
